<resources>
    <string name="app_name">Online Canteen Order</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_Cart">Cart</string>
    <string name="action_search">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Categories</string>
    <string name="menu_history">History</string>
    <string name="menu_stocks">Stock</string>
    <string name="menu_about">About us</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">Profile</string>

    <!-- Messages -->
    <string name="message_already_signed_in">You are already signed in please \'sign out\' before new \'sign in\'!
    </string>
    <string name="message_not_signed_in">You are not signed in!</string>
    <string name="message_signed_in_successfully">You are signed in successfully!</string>
    <string name="message_invalid_credentials">Your username or password is incorrect!</string>
    <string name="message_signing_in_wait">Signing in please wait&#8230;</string>
    <string name="message_signing_up_wait">Creating new account please wait&#8230;</string>
    <string name="message_signed_up_successfully">Your account has been created successfully!</string>
    <string name="message_profile_updated_successfully">Your profile updated successfully!</string>
    <string name="message_something_wrong">Something went wrong. Please try again later or contact vendor.</string>
    <string name="message_sign_out_successfully">You are signed out successfully!</string>

    <string name="message_invalid_email">Your email address is invalid!</string>
    <string name="message_required">All fields are required!</string>
    <string name="message_invalid_password">Invalid password please enter valid password!</string>
    <string name="message_password_dont_match">\'Password\' &amp; \'Confirm Password\' must match!</string>
    <string name="message_password_must_be_atleast">Password must be atleast 8 characters long!</string>
    <string name="message_processing">Please wait…</string>

    <string name="pick_image_intent_text">Browse Image From:</string>
    <string name="error_message_first_name">Enter First Name</string>
    <string name="error_message_last_name">Enter Last Name</string>
    <string name="error_message_phone_number">Enter Valid Phone Number</string>
    <string name="error_message_nic">Enter Valid NIC</string>
    <string name="error_message_date">Select Date</string>
    <string name="error_message_image">Please select an image!</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="error_phone_number">Enter Phone Number</string>
    <string name="signing_up">Signing Up</string>
    <string name="signing_up_message">Please wait while we check your credentials.</string>
    <string name="something_went_wrong">Something went wrong please try again.</string>
    <string name="message_pick_a_file">Please pick a file.</string>
    <string name="message_select_pdf_file">Select PDF File:</string>
    <string name="checking">Checking…</string>
    <string name="check_your_email">Password reset instructions send to you. Please check your email.</string>
    <string name="recover_description">Dont worry! Just enter your email below and we shall send you the password reset
        instructions.
    </string>

    <!--input fileds-->
    <string name="email_textview">Email *</string>
    <string name="password_textview">Password *</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="create_one">Create New One</string>
    <string name="register">Register</string>
    <string name="recover_password">Recover Password</string>
    <string name="name_textview">Name *</string>
    <string name="name">Name</string>
    <string name="phone">Phone:</string>
    <string name="recover">Recover</string>
    <string name="fname_textview">First Name *</string>
    <string name="first_name">First Name</string>
    <string name="lname_textview">Last Name *</string>
    <string name="last_name">Last Name</string>
    <string name="cp_textview">Confirm Password *</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_textview">Phone *</string>
    <string name="phone_format">+923001234567</string>
    <string name="logo_image">Logo</string>
    <string name="email">Email</string>
    <string name="category_textview">Select Category *</string>
    <string name="price_textview">Price/Item *</string>
    <string name="stock_textview">Stock *</string>
    <string name="price">i.e, Rs. 200</string>
    <string name="stock">i.e, 200</string>
    <string name="comments">Description</string>
    <string name="add_menu">Add Menu</string>
    <string name="update_menu">Update Menu</string>
    <string name="desc_textview">Menu Description *</string>
    <string name="add_category">Add category</string>
    <string name="no_item_found">Empty list.</string>
    <string name="action">ACTION</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="search_stock">Search stock</string>
    <string name="search_category">Search category</string>
    <string name="user_iamge">User image</string>
    <string name="personal">Personal</string>
    <string name="type">Type:</string>
    <string name="gcuf">GCUF</string>
    <string name="quantity">Quantity</string>
    <string name="desc">Description</string>
    <string name="team">Team Members</string>
    <string name="member_one">Member 1</string>
    <string name="member_two">Member 2</string>
    <string name="supervisors">Supervisors</string>
    <string name="supervisors_one">Supervisors One</string>
    <string name="supervisors_two">Supervisors Two</string>
    <string name="academic">Academic Information</string>
    <string name="department">Department</string>
    <string name="session">Session</string>
    <string name="college">College</string>
    <string name="menu">MENU</string>
    <string name="confirmed">Confirmed</string>
    <string name="total">TOTAL</string>
    <string name="menu_orders">Orders</string>
    <string name="search_menu">Search menu</string>
    <string name="default_notification_channel_id">36</string>
    <string name="ty">Type</string>
    <string name="small">For small</string>
    <string name="medium">For medium</string>
    <string name="large">For Full/Large</string>
    <string name="error_message_price">Enter Price</string>
    <string name="error_message_stock">Enter Stock</string>
    <string name="error_message_desc">Enter description</string>
    <string name="s">Small</string>
    <string name="m">Medium</string>
    <string name="l">Large</string>
    <string name="_1">1</string>
    <string name="home">Home</string>
    <string name="order_page">Order page</string>
    <string name="_0">0</string>
    <string name="p">PRICE</string>
    <string name="version">Version: 1.0</string>
    <string name="follow">Follow us</string>
    <string name="rateus">Rate us</string>
    <string name="share">Share</string>
    <string name="more_apps">More apps</string>
    <string name="facebbok_button">Facebook button</string>
    <string name="twitter_button">Twitter button</string>
    <string name="instagram_button">Instagram button</string>
    <string name="linkedin_button">Linkedin button</string>

</resources>
