<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person"
                android:title="@string/menu_profile"/>

        <item
                android:id="@+id/nav_orders"
                android:icon="@drawable/ic_view_list"
                android:title="@string/menu_orders"/>

        <item
                android:id="@+id/nav_category"
                android:icon="@drawable/ic_list"
                android:title="@string/menu_category"/>
        <item
                android:id="@+id/nav_stock"
                android:icon="@drawable/ic_storage"
                android:title="@string/menu_stocks"/>
        <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_notifications"
                android:title="@string/action_notifications"/>
        <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history"
                android:title="@string/menu_history"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/menu_about"/>
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/menu_logout"/>
    </group>

</menu>
