<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".fragments.RegisterFragment">

    <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/twenty_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:id="@+id/browse_image"
                android:layout_width="wrap_content"
                android:layout_height="100dp">

            <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/user_thumbnail"
                    android:layout_width="@dimen/one_hundrad_dp"
                    android:layout_height="@dimen/one_hundrad_dp"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_default_avatar"
                    app:civ_border_width="0dp" />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/user_thumbnail"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="75dp"
                    android:layout_marginStart="75dp"
                    android:background="@drawable/circle"
                    android:padding="5dp"
                    android:src="@drawable/ic_add" />


        </RelativeLayout>


        <TextView
                style="@style/textViewStyle"
                android:text="@string/name_textview"/>
        <EditText
                android:id="@+id/reg_name"
                style="@style/edittextStyle"
                android:inputType="text"
                android:hint="@string/name"
                android:drawableStart="@drawable/ic_text"
                android:drawableLeft="@drawable/ic_text"/>

        <TextView
                style="@style/textViewStyle"
                android:layout_marginTop="@dimen/twenty_dp"
                android:text="@string/email_textview" />
        <EditText
                android:id="@+id/reg_email"
                style="@style/edittextStyle"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:drawableStart="@drawable/ic_email"
                android:drawableLeft="@drawable/ic_email"/>

        <TextView
                style="@style/textViewStyle"
                android:layout_marginTop="@dimen/twenty_dp"
                android:text="@string/password_textview" />
        <EditText
                android:id="@+id/reg_password"
                style="@style/edittextStyle"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_lock"
                android:drawableLeft="@drawable/ic_lock" />

        <TextView
                style="@style/textViewStyle"
                android:layout_marginTop="@dimen/twenty_dp"
                android:text="@string/cp_textview"/>
        <EditText
                android:id="@+id/reg_cp"
                style="@style/edittextStyle"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:drawableStart="@drawable/ic_lock"
                android:drawableLeft="@drawable/ic_lock" />

        <TextView
                style="@style/textViewStyle"
                android:layout_marginTop="@dimen/twenty_dp"
                android:text="@string/phone_textview" />
        <EditText
                android:id="@+id/reg_phone"
                style="@style/edittextStyle"
                android:inputType="phone"
                android:hint="@string/phone_format"
                android:drawableStart="@drawable/ic_phone"
                android:drawableLeft="@drawable/ic_phone" />

        <Button
                android:id="@+id/register"
                style="@style/buttonStyle"
                android:layout_gravity="end"
                android:text="@string/register"
                tools:ignore="RelativeOverlap" />

    </LinearLayout>


</ScrollView>