<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".activities.admin.AddMenu">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center"
                  android:layout_marginBottom="@dimen/fifty_dp"
                  android:padding="@dimen/twenty_dp">

        <RelativeLayout
                android:id="@+id/browse_menu_image"
                android:layout_width="wrap_content"
                android:layout_height="100dp">

            <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/menu_thumbnail"
                    android:layout_width="@dimen/one_hundrad_dp"
                    android:layout_height="@dimen/one_hundrad_dp"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_default_avatar"
                    app:civ_border_width="0dp" />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/menu_thumbnail"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="75dp"
                    android:layout_marginStart="75dp"
                    android:background="@drawable/circle"
                    android:padding="5dp"
                    android:src="@drawable/ic_add" />


        </RelativeLayout>

        <TextView
                style="@style/textViewStyle"
                android:layout_marginTop="@dimen/twenty_dp"
                android:text="@string/name_textview"/>
        <EditText
                android:id="@+id/menu_name"
                style="@style/edittextStyle"
                android:inputType="text"
                android:hint="@string/name"
                android:drawableStart="@drawable/ic_text"
                android:drawableLeft="@drawable/ic_text"/>

        <TextView
                style="@style/textViewStyle"
                android:layout_marginTop="@dimen/twenty_dp"
                android:text="@string/category_textview"/>
        <Spinner android:id="@+id/category_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:background="@drawable/edittext_style"/>

        <TextView
                style="@style/textViewStyle"
                android:layout_marginTop="@dimen/twenty_dp"
                android:text="@string/price_textview"/>
        <EditText
                android:id="@+id/menu_price1"
                style="@style/edittextStyle"
                android:inputType="number"
                android:hint="@string/small"
                android:drawableStart="@drawable/ic_money"
                android:drawableLeft="@drawable/ic_money"/>
        <EditText
                android:id="@+id/menu_price2"
                style="@style/edittextStyle"
                android:inputType="number"
                android:hint="@string/medium"
                android:drawableStart="@drawable/ic_money"
                android:drawableLeft="@drawable/ic_money"/>
        <EditText
                android:id="@+id/menu_price3"
                style="@style/edittextStyle"
                android:inputType="number"
                android:hint="@string/large"
                android:drawableStart="@drawable/ic_money"
                android:drawableLeft="@drawable/ic_money"/>

        <TextView
                style="@style/textViewStyle"
                android:layout_marginTop="@dimen/twenty_dp"
                android:text="@string/stock_textview"/>
        <EditText
                android:id="@+id/menu_stock"
                style="@style/edittextStyle"
                android:inputType="number"
                android:hint="@string/stock"
                android:drawableStart="@drawable/ic_storage"
                android:drawableLeft="@drawable/ic_storage"/>

        <TextView
                style="@style/textViewStyle"
                android:layout_marginTop="@dimen/twenty_dp"
                android:text="@string/desc_textview"/>
        <EditText
                android:id="@+id/menu_desc"
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_fifty_dp"
                android:layout_marginTop="@dimen/six_dp"
                android:textSize="@dimen/fourteen_sp"
                android:gravity="start|top"
                android:maxLines="6"
                android:background="@drawable/edittext_style"
                android:hint="@string/comments"
                android:padding="@dimen/six_dp"/>

        <Button
                android:id="@+id/add_menu"
                style="@style/buttonStyle"
                android:layout_gravity="end"
                android:paddingLeft="@dimen/ten_dp"
                android:paddingRight="@dimen/ten_dp"
                android:text="@string/add_menu"
                tools:ignore="RelativeOverlap" />

    </LinearLayout>

</ScrollView>