<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center"
              android:padding="@dimen/twenty_dp"
              android:background="@android:color/white"
             tools:context=".fragments.LoginFragment">

    <ImageView
            android:src="@mipmap/ic_launcher_round"
            android:scaleType="centerCrop"
            android:contentDescription="@string/logo_image"
            android:layout_width="@dimen/one_hundrad_dp"
            android:layout_height="@dimen/one_hundrad_dp" />

    <TextView
            style="@style/textViewStyle"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/email_textview" />
    <EditText
            android:id="@+id/login_email"
            android:hint="@string/email"
            style="@style/edittextStyle"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"/>

    <TextView
            style="@style/textViewStyle"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/password_textview" />
    <EditText
            android:id="@+id/login_password"
            android:hint="@string/password"
            style="@style/edittextStyle"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock" />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp">

        <Button
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fourty_dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@android:color/transparent"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:layout_centerVertical="true"
                android:textColor="@android:color/black" />

        <Button
                android:id="@+id/login"
                style="@style/buttonStyle"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/login"
                android:textAllCaps="false"
                tools:ignore="RelativeOverlap" />

    </RelativeLayout>
    <RelativeLayout
            android:layout_marginTop="@dimen/ten_dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tv"
                android:text="@string/no_account_yet"
                android:layout_centerVertical="true"
                android:textColor="@color/colorGrayDarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        <Button
                android:id="@+id/create_account"
                android:background="@android:color/transparent"
                android:text="@string/create_one"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv"
                android:layout_toRightOf="@id/tv"
                android:layout_marginLeft="@dimen/five_dp"
                android:layout_marginStart="@dimen/five_dp" />

    </RelativeLayout>


</LinearLayout>