<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/twenty_dp"
              android:background="@android:color/white"
             tools:context=".fragments.RecoverFragment">

    <ImageView
            android:src="@mipmap/ic_launcher_round"
            android:scaleType="centerCrop"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo_image"
            android:layout_width="@dimen/one_hundrad_dp"
            android:layout_height="@dimen/one_hundrad_dp" />

    <TextView
            android:text="@string/recover_description"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
            style="@style/textViewStyle"
            android:layout_marginTop="@dimen/fifty_dp"
            android:text="@string/email_textview" />
    <EditText
            android:id="@+id/forgot_email"
            style="@style/edittextStyle"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email" />

    <Button
            style="@style/buttonStyle"
            android:id="@+id/recover_password"
            android:layout_gravity="end"
            android:text="@string/recover"
            tools:ignore="RelativeOverlap" />


</LinearLayout>