<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="175dp"
                  android:orientation="vertical"
                  android:padding="@dimen/activity_horizontal_margin"
                  android:gravity="bottom">

        <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="@dimen/seventy_dp"
                android:layout_height="@dimen/seventy_dp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/colorIcon"
                android:contentDescription="@string/nav_header_desc"
                android:id="@+id/nav_image"/>

        <TextView
                android:id="@+id/nav_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_title"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_subtitle"
                android:textColor="@color/colorIcon"
                android:id="@+id/nav_email"/>

    </LinearLayout>

    <View android:layout_width="match_parent" android:layout_height="1dp"
          android:background="@color/colorGrayLight"/>


</LinearLayout>
