<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        tools:context=".activities.admin.CategoryActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@color/colorLight"
                  android:orientation="horizontal">

        <TextView android:layout_width="0dp"
                  android:layout_weight="5"
                  android:layout_height="wrap_content"
                  android:text="@string/name"
                  android:textStyle="bold"
                  android:textAllCaps="true"
                  android:padding="@dimen/ten_dp"
                  android:maxLines="1"
                  android:textColor="@color/colorAccent"/>

        <View android:layout_width="1dp"
              android:layout_height="match_parent"
              android:background="@color/colorGrayLight"/>

        <TextView android:layout_width="0dp"
                  android:layout_weight="2"
                  android:layout_height="wrap_content"
                  android:text="@string/action"
                  android:textStyle="bold"
                  android:textAllCaps="true"
                  android:padding="@dimen/ten_dp"
                  android:maxLines="1"
                  android:textAlignment="center"
                  android:textColor="@color/colorAccent"/>

    </LinearLayout>
    <!-- Replaced android.support.v7.widget.RecyclerView with the
         new EmptyRecyclerView -->
    <org.techive.onlinecanteenorder.utils.OCORecyclerView
            android:id="@+id/category_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/activity_category"
    />

    <!-- Added an empty view which will be shown when the EmptyRecyclerView
     is empty -->
    <LinearLayout
            android:id="@+id/empty_category_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/empty_image"
                android:layout_width="@dimen/eighty_dp"
                android:layout_height="@dimen/eighty_dp"
                android:layout_marginTop="@dimen/twenty_dp"
                android:src="@drawable/no_cart"/>

        <TextView
                android:id="@+id/empty_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:gravity="center"
                android:text="@string/no_item_found"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>